--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 ::: {.column width="50%"}
 ### Documents
 
-You can write HTML, Word and PDF documents
+You can write HTML, Word and PDF documents. 
 :::
 
 ::: {.column width="50%"}
